# async-duckdb

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
src/: client.rs  error.rs  lib.rs  pool.rs
tests/: tests.rs
