[package]
name = "async-duckdb"
version = "0.2.0"
authors = [
  "Jesse Rubin",
  "Ryan Fowler", # via ryfowl's `async-sqlite` crate
]
edition = "2024"
license = "MIT"
description = "A library for working with duckdb asynchronously"
repository = "https://github.com/jessekrubin/async-duckdb"
documentation = "https://docs.rs/async-duckdb"
keywords = ["duckdb", "async", "tokio"]
categories = ["database"]

[features]
default = ["bundled"]
bundled = ["duckdb/bundled"]
json = ["duckdb/json"]
parquet = ["duckdb/parquet"]
vscalar = ["duckdb/vscalar"]
vtab = ["duckdb/vtab"]
vtab-loadable = ["duckdb/vtab-loadable"]
vtab-excel = ["duckdb/vtab-excel"]
vtab-arrow = ["duckdb/vtab-arrow"]
appender-arrow = ["duckdb/appender-arrow"]
vtab-full = ["duckdb/vtab-full"]
extensions-full = ["duckdb/extensions-full"]
buildtime_bindgen = ["duckdb/buildtime_bindgen"]
modern-full = ["duckdb/modern-full"]
polars = ["duckdb/polars"]
column_decltype = ["duckdb/column_decltype"]
extra_check = ["duckdb/extra_check"]
loadable-extension = ["duckdb/loadable-extension"]
chrono = ["duckdb/chrono"]
uuid = ["duckdb/uuid"]

[dependencies]
crossbeam-channel = { version = "0.5.9" }
duckdb = { version = "1.3.2" }
futures-channel = { version = "0.3.29" }
futures-util = { version = "0.3.29" }

[dev-dependencies]
async-std = { version = "1.13.1" }
paste = { version = "1.0.12" }
tempfile = { version = "3.20.0" }
tokio = { version = "1.46.1", features = ["rt"] }

[lints.clippy]
# groups
cargo = { level = "warn", priority = -2 }
all = { level = "warn", priority = -2 }
# periodically check nursery lints
# nursery = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "warn", priority = 2 }
panic = { level = "warn", priority = -1 }
style = { level = "warn", priority = 1 }
perf = { level = "warn", priority = 3 }
# deny lints
unwrap_used = "deny"
# allow pedantic
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# allow cargo
multiple_crate_versions = "allow"

